cmake_minimum_required(VERSION 2.8)

Project(POLL_SOCKET)

SET(POLL_SOCKET_DIR poll-socket.cpp)

MESSAGE(STATUS "This is PROJECT_SOURCE Dir: " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT_BINARY Dir: " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is CMAKE_CURRENT_BINARY Dir: " ${CMAKE_CURRENT_BINARY_DIR})

add_executable(poll-socket ${POLL_SOCKET_DIR})

install(TARGETS poll-socket RUNTIME DESTINATION bin)
