cmake_minimum_required(VERSION 2.8)

Project(SELECT_SOCKET)

SET(SELECT_SOCKET_DIR select-socket.cpp)

MESSAGE(STATUS "This is PROJECT_SOURCE Dir: " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT_BINARY Dir: " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is CMAKE_CURRENT_BINARY Dir: " ${CMAKE_CURRENT_BINARY_DIR})

add_executable(select-socket ${SELECT_SOCKET_DIR})

install(TARGETS select-socket RUNTIME DESTINATION bin)
